Text is too close to border. Home Page Fix (#715)

--- a/frontend/css/common_styles.css
+++ b/frontend/css/common_styles.css
@@ -8,6 +8,12 @@
         flex-basis: 100%;
     }
 
+    .responsive-home-page-center {
+        flex-basis: 100%;
+        padding-left: 1px;
+        padding-right: 1px;
+    }
+
     #mainArea {
         padding: 0.4em !important;
     }
@@ -22,6 +28,10 @@
     .responsive-center {
         flex-basis: 90%;
     }
+
+    .responsive-home-page-center {
+        flex-basis: 90%;
+    }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -31,6 +41,10 @@
     }
 
     .responsive-center {
+        flex-basis: 80%;
+    }
+
+    .responsive-home-page-center {
         flex-basis: 80%;
     }
 
@@ -48,6 +62,10 @@
     .responsive-center {
         flex-basis: 80%;
     }
+
+    .responsive-home-page-center {
+        flex-basis: 80%;
+    }
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
@@ -59,6 +77,10 @@
     .responsive-center {
         flex-basis: 80%;
     }
+
+    .responsive-home-page-center {
+        flex-basis: 80%;
+    }
 }
 
 /* Super large devices (large desktops, TVs, 1441px and up) */
@@ -68,6 +90,10 @@
     }
 
     .responsive-center {
+        flex-basis: 70%;
+    }
+
+    .responsive-home-page-center {
         flex-basis: 70%;
     }
 
